--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,7 +1,4 @@
 <h1>Welcome#index</h1>
 <p>Find me in app/views/welcome/index.html.erb</p>
-
-
-<%= javascript_pack_tag 'hello_react' %>
-
-<%= javascript_pack_tag 'welcome' %>
+<%= react_component 'HelloWorld', {greeting: "danny"} %>
+<%= react_component 'forms/WelcomeForm' %>
